# ijk

NrrdIO/: .gitignore  CMakeLists.txt  INSTALL  README
ijkmcube/: .gitignore  CHANGES  CMakeLists.txt  README  ijk.txx  ijkIO.txx  ijkgrid.txx  ijkmcube.cxx  ijkmcube.h  ijkmcube_main.cxx  ijkoctree.cxx  ijkoctree.h  ijktable.cxx  ijktable.h  obsolete.cxx  test_minmax.cxx  test_project.cxx
ijkmcube/man/: ijkmcube.1  ijkmcube.html
ijktable/: .gitignore  CMakeLists.txt  INSTALL  README  clarkson_hull.c  clarkson_hull.h  ijk.txx  ijkdifftable.cxx  ijkgenpatch.cxx  ijkgenpatch.h  ijkgentable.cxx  ijktable.cxx  ijktable.h  ijktable.xsd  ijktableinfo.cxx  ijktext2c.cxx  ijkxitIO.cxx
ijktable/man/: ijkdifftable.1  ijkdifftable.html  ijkgenpatch.3  ijkgenpatch.html  ijkgentable.1  ijkgentable.html  ijktable.3  ijktable.html  ijktableinfo.1  ijktableinfo.html  xit.5  xit.html
xit/: iso.cube.3D.xit
